--- a/css/main.css
+++ b/css/main.css
@@ -1721,7 +1721,8 @@ textarea {
 
 .media-project {
   padding: 8px !important;
-  position: relative; }
+  position: relative;
+  border-radius: 15px; }
   .media-project:before {
     content: "";
     position: absolute;
@@ -1730,7 +1731,8 @@ textarea {
     top: 8px;
     left: 8px;
     right: 8px;
-    z-index: 0; }
+    z-index: 0; 
+    border-radius: 15px;}
   .media-project:after {
     content: "";
     position: absolute;
@@ -1740,10 +1742,12 @@ textarea {
     bottom: 8px;
     left: 8px;
     right: 8px;
-    z-index: 0; }
+    z-index: 0; 
+    border-radius: 15px;}
   .media-project .media-img img {
     width: 100%;
-    height: auto; }
+    height: auto;
+    border-radius: 15px; }
   .media-project .media-img:before {
     position: absolute;
     content: "";
@@ -1752,6 +1756,7 @@ textarea {
     right: 8px;
     bottom: 8px;
     background: rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
     transition: 0.2s; }
   .media-project .media-img:after {
     position: absolute;
@@ -1761,6 +1766,7 @@ textarea {
     right: 8px;
     bottom: 8px;
     border: 1px solid rgba(255, 255, 255, 0);
+    border-radius: 15px;
     transition: 0.2s; }
   .media-project .media-body {
     position: absolute;
@@ -1786,13 +1792,15 @@ textarea {
     right: 2rem;
     z-index: 1; }
   .media-project:hover .media-img:before {
-    background: rgba(0, 0, 0, 0.4); }
+    background: rgba(0, 0, 0, 0.4); 
+    border-radius: 15px;}
   .media-project:hover .media-img:after {
     top: 16px;
     left: 16px;
     right: 16px;
     bottom: 16px;
-    border: 1px solid white; }
+    border: 1px solid white;
+    border-radius: 15px; }
 
 /* 1.3 Grid / list / slider / gallery / price table */
 .carousel-slick-alpha .item-list .ilustr img {
@@ -4266,9 +4274,9 @@ textarea {
 .project-list {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 1rem;
-  margin-left: -8px;
-  margin-right: -8px; }
+  margin: auto;
+  max-width: 1560px;
+}
   .project-list.decor {
     border-top: 1px solid rgba(255, 255, 255, 0.2);
     padding-top: 2rem; }
