--- a/css/main.css
+++ b/css/main.css
@@ -5329,14 +5329,14 @@ color: var(--first-color);
   width: 100%;
   position: relative;
   margin: auto;
-  top: 20%;
+  top: 0%;
 }
 
 .testim .wrap {
   position: relative;
   width: 100%;
   max-width: 1020px;
-  padding: 40px 20px;
+  padding: 0px 20px;
   margin: auto;
 }
 
@@ -5911,4 +5911,56 @@ body {
   line-height: 25px;
 }
 
+}
+
+
+/* Client Counter */
+.statistic-section {
+  padding-top: 70px;
+  padding-bottom: 70px;
+  background: #ffffff07;  /* fallback for old browsers */
+  max-width: 1024PX;
+  margin: auto;
+  border-radius: 15px;
+}
+
+.count-title {
+ font-size: 50px;
+ font-weight: normal;
+ margin-top: 10px;
+ margin-bottom: 0;
+ text-align: center;
+ font-weight: bold;
+ color: #fff;
+}
+
+.stats-text {
+ font-size: 15px;
+ font-weight: normal;
+ margin-top: 15px;
+ margin-bottom: 0;
+ text-align: center;
+ color: #fff;
+ text-transform: uppercase;
+ font-weight: bold;
+}
+
+.stats-line-black {
+margin: 12px auto 0;
+ width: 55px;
+ height: 2px;
+ background-color: #fff;
+}
+.stats-icon {
+ font-size: 35px;
+ margin: 0 auto;
+ float: none;
+ display: table;
+ color: #fff;
+}
+
+@media (max-width: 992px) {
+.counter {
+ margin-bottom: 40px;
+}
 }
