Google Maps Fixed

--- a/css/main.css
+++ b/css/main.css
@@ -5966,3 +5966,21 @@ margin: 12px auto 0;
  margin-bottom: 40px;
 }
 }
+
+
+/* Map Responsive */
+/* Start: Google Maps Responsive */
+.map-responsive {
+  overflow:hidden;
+  padding-bottom:230px; /*Reduce este valor si el mapa fuera muy alto, por ejemplo 250px, puedes usar porcentajes, 50%*/
+  position:relative;
+  height:0;
+}
+.map-responsive iframe{
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
+}
+/* End: Google Maps Responsive */
