Link to dev website

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,6 @@
 /*-----------------------------------------------------------------
-[Legal Notice]
-
-Copyright (c) Miradontsoa
-Website Template by miradontsoa
-http://highhay.com
-http://miradontsoa.com
+  Website By Ignacio Prados
+  http://ignacioprados.vercel.app
 -------------------------------------------------------------------*/
 /*------------------------------------------------------------------
 [Table of contents]
