--- a/css/main.css
+++ b/css/main.css
@@ -891,7 +891,7 @@ p {
 .form-control-line.form-control-white {
   border-bottom-color: var(--white-color); }
   .form-control-line.form-control-white:focus {
-    border-color: #adadad; }
+    border-color: var(--first-color); }
   .form-control-line.form-control-white.custom-select {
     background: transparent url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23ffffff' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right 0.75rem center;
     background-size: 8px 10px; }
@@ -6048,3 +6048,7 @@ margin: 12px auto 0;
     font-size: 12px;
   }
   }
+
+.invite{
+  margin-top: 2.2rem;
+}
